--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "antd": "^3.20.2",
-    "babel-plugin-import": "^1.12.0",
     "bootstrap": "^4.3.1",
     "customize-cra": "^0.2.14",
     "less": "^3.9.0",
@@ -44,6 +43,12 @@
     "@storybook/addon-actions": "^5.1.9",
     "@storybook/addon-links": "^5.1.9",
     "@storybook/addons": "^5.1.9",
-    "@storybook/react": "^5.1.9"
+    "@storybook/react": "^5.1.9",
+    "babel-plugin-import": "^1.12.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1"
   }
 }
