--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ verify_ssl = true
 
 [packages]
 pymongo = "*"
+flask = "*"
+flask-restful = "*"
+flask-cors = "*"
+pony = "*"
 
 [requires]
 python_version = "3.7"
