--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "superagent": "^5.1.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -43,8 +44,8 @@
     "@storybook/addon-links": "^5.1.9",
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
-    "babel-plugin-import": "^1.12.0",
     "babel-core": "^6.26.0",
+    "babel-plugin-import": "^1.12.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
